# advanced-python

./: pyproject.toml
hw1/: task1.py  task2.py  task3.py
hw1/artifacts/: task1.txt  task2.txt  task3.txt
hw1/resources/: 2.txt  3.txt
hw2/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
hw2/artifacts/task1/: table.tex
hw2/artifacts/task2/: link.txt  table_and_image.tex
hw2/artifacts/task3/: docker-compose.yaml
hw2/hw2/latex_generator_hw/: generator.py
hw3/: main.py  pyproject.toml
hw3/artifacts/task1/: matrix+.txt
hw3/artifacts/task2/: matrix_mixins*.txt  matrix_mixins@.txt
hw3/artifacts/task3/: B.txt  C.txt  CD.txt  hash.txt
hw3/matrix/: __init__.py  matrix.py  matrix_mixins.py
hw4/: fibonacci.py  intagrate.py  proc_and_pipes.py  pyproject.toml
hw4/artifacts/task1/: benchmarks.txt
hw4/artifacts/task2/: benchmarks.txt
hw4/artifacts/task3/: proc_and_pipes.txt
