[tool.poetry]
name = "hw2"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.12"
latex_generator_hw = "0.1.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.0.0"
flake8 = "^7.1.2"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
ignore = "E203, E266, E501, W503"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
